@@ -54,7 +54,7 @@ public class DetermineHistoryLevelCmd implements Command<HistoryLevel> {
       }
       else {
         // if a custom non-null value is not registered, throw an exception.
-        throw new ProcessEngineException(String.format("The configured history level with id='%s' is not registered in this config.", databaseHistoryLevel));
+        throw new ProcessEngineException("The configured history level with id='%s' is not registered in this config.".formatted(databaseHistoryLevel));
       }
     }
     else {
