@@ -523,11 +523,10 @@ public abstract class AbstractCaseAssert<S extends AbstractCaseAssert<S, A>, A e
     Assertions
         .assertThat(actualState)
         .overridingErrorMessage(
-            String.format(
-                "Expected %s to be in state '%s', but found it to be '%s'!",
-                toString(actual),
-                state,
-                CaseExecutionState.CASE_EXECUTION_STATES.get(actualState))).isEqualTo(state.getStateCode());
+      "Expected %s to be in state '%s', but found it to be '%s'!".formatted(
+        toString(actual),
+        state,
+        CaseExecutionState.CASE_EXECUTION_STATES.get(actualState))).isEqualTo(state.getStateCode());
     @SuppressWarnings("unchecked")
     S self = (S) this;
     return self;
@@ -544,7 +543,7 @@ public abstract class AbstractCaseAssert<S extends AbstractCaseAssert<S, A>, A e
     Assertions
         .assertThat(actual.getActivityType())
         .overridingErrorMessage(
-            String.format("Expected %s to be a '%s', but found it to be a '%s'!", toString(actual), type, actual.getActivityType()))
+          "Expected %s to be a '%s', but found it to be a '%s'!".formatted(toString(actual), type, actual.getActivityType()))
         .isEqualTo(type);
     @SuppressWarnings("unchecked")
     S self = (S) this;
@@ -593,19 +592,18 @@ public abstract class AbstractCaseAssert<S extends AbstractCaseAssert<S, A>, A e
   @Override
   protected String toString(A caseExecution) {
     if (caseExecution != null) {
-      return !actual.getCaseInstanceId().equals(actual.getId()) ? String.format(
-          "%s {id='%s', activityId='%s', caseInstanceId='%s'}",
-          caseExecution.getActivityType(),
-          caseExecution.getId(),
-          caseExecution.getActivityId(),
-          caseExecution.getCaseInstanceId())
-          : String.format(
-              "%s {id='%s', activityId='%s'" + (((CaseInstance) caseExecution).getBusinessKey() != null ? ", businessKey='%s'}"
-                  : "}"),
-              CaseInstance.class.getSimpleName(),
-              caseExecution.getId(),
-              caseExecution.getActivityId(),
-              ((CaseInstance) caseExecution).getBusinessKey());
+      return !actual.getCaseInstanceId().equals(actual.getId()) ? "%s {id='%s', activityId='%s', caseInstanceId='%s'}".formatted(
+        caseExecution.getActivityType(),
+        caseExecution.getId(),
+        caseExecution.getActivityId(),
+        caseExecution.getCaseInstanceId())
+          : (
+        "%s {id='%s', activityId='%s'" + (((CaseInstance) caseExecution).getBusinessKey() != null ? ", businessKey='%s'}"
+          : "}")).formatted(
+        CaseInstance.class.getSimpleName(),
+        caseExecution.getId(),
+        caseExecution.getActivityId(),
+        ((CaseInstance) caseExecution).getBusinessKey());
     }
     return null;
   }
@@ -642,14 +640,22 @@ public abstract class AbstractCaseAssert<S extends AbstractCaseAssert<S, A>, A e
     Map<String, Object> vars = vars();
     StringBuilder message = new StringBuilder();
     message.append("Expecting %s to hold ");
-    message.append(shouldHaveVariables ? "case variables" + (shouldHaveSpecificVariables ? " %s, "
-        : ", ")
-        : "no variables at all, ");
-    message.append("instead we found it to hold " + (vars.isEmpty() ? "no variables at all."
-        : "the variables %s."));
-    if (vars.isEmpty() && getCurrent() == null)
-      message.append(" (Please make sure you have set the history " + "service of the engine to at least 'audit' or a higher level "
-          + "before making use of this assertion for historic instances!)");
+    if (shouldHaveVariables) {
+      message.append("case variables");
+      message.append((shouldHaveSpecificVariables ? " %s, " : ", "));
+    } else {
+      message.append("no variables at all, ");
+    }
+    message.append("instead we found it to hold ");
+    if (vars.isEmpty()) {
+      message.append("no variables at all.");
+    } else {
+      message.append("the variables %s.");
+    }
+    if (vars.isEmpty() && getCurrent() == null) {
+      message.append(" (Please make sure you have set the history service of the engine to at least 'audit' or a higher level ");
+      message.append("before making use of this assertion for historic instances!)");
+    }
 
     MapAssert<String, Object> assertion = variables().overridingErrorMessage(
         message.toString(),
